--- a/packages/client/src/styles/local/components/bgvectors.module.css
+++ b/packages/client/src/styles/local/components/bgvectors.module.css
@@ -1,126 +1,104 @@
 @media all and (min-width: 0px) {
     .bgVectors{
         position: absolute;
+        z-index: 0;
         top: 0;
-        width: 100%;
+        width: 92%;
+        margin: 0;
         height: 100%;
     }
-    .bgVectors img:nth-child(1){
+    .bgVectors img{
         position: absolute;
-        top: 40px;
-        right: 70px;
+    }
+    .bgVectors img:nth-child(1){
+        top: 38px;
+        right: 10%;
     }
     .bgVectors img:nth-child(2){
-        position: absolute;
         top: 80px;
-        left: 20px;
+        left: 0;
+        width: 70px;
+        height: 46px;
     }
     .bgVectors img:nth-child(3){
-        position: absolute;
-        bottom: 250px;
+        bottom: 200px;
         left: 30px;
         width: 55px;
     }
     .bgVectors img:nth-child(4){
-        position: absolute;
         top: 0;
     }
     .bgVectors img:nth-child(5){
-        position: absolute;
-        bottom: 250px;
+        bottom: 190px;
         right: 30px;
     }
     .bgVectors img:nth-child(6){
-        position: absolute;
         top: 23%;
-        right: 7%;
+        right: 0;
     }
     .bgVectors img:nth-child(7){
-        position: absolute;
-        bottom: 100px;
+        bottom: 50px;
         left: 40%;
     }
     .bgVectors img:nth-child(8){
-        position: absolute;
         top: 10%;
-        right: 7%;
+        right: 0;
     }
     .bgVectors img:nth-child(9){
-        position: absolute;
         top: 56%;
-        right: 30px;
+        right: 0;
     }
     .bgVectors img:nth-child(10){
-        position: absolute;
         bottom: 100px;
     }
 }
 
-@media all and (min-width: 768px) {
-  
-}
-@media all and (min-width: 1024px) {
-   
-}
 @media all and (min-width: 1280px){
     .bgVectors img:nth-child(1){
-        position: absolute;
         top: 40px;
         left: 20%;
     }
     .bgVectors img:nth-child(2){
-        position: absolute;
         top: 100px;
-        left: 7%;
+        left: 0;
+        width: auto;
+        height: auto;
     }
     .bgVectors img:nth-child(3){
-        position: absolute;
-        bottom: 16%;
+        bottom: 0;
         left: 20%;
         width: auto;
     }
     .bgVectors img:nth-child(4){
-        position: absolute;
         top: 10%;
         display: none;
     }
-    .bgVectors img:nth-child(5){
-        
-        position: absolute;
+    .bgVectors img:nth-child(10){
         bottom: 30%;
         left: 8%;
     }
     .bgVectors img:nth-child(6){
-        position: absolute;
-        top: 38%;
-        left: 22%;
+        top: 45%;
+        left: 18%;
     }
     .bgVectors img:nth-child(7){
-        position: absolute;
-        bottom: 380px;
+        bottom: 250px;
         left: 38%;
     }
     .bgVectors img:nth-child(8){
-        position: absolute;
         top: 8%;
-        right: 10%;
+        right: 0;
     }
     .bgVectors img:nth-child(9){
-        position: absolute;
-        top: 43%;
+        top: 53%;
         left: 30%;
     }
-    .bgVectors img:nth-child(10){
-        position: absolute;
+    .bgVectors img:nth-child(5){
         bottom: 100px;
+        left:  0;
     }
     .bgVectors img:nth-child(11){
-        position: absolute;
-        bottom: 22%;
-        right: 7%;
+        bottom: 13%;
+        right: 3%;
     }
-}
-
-@media all and (min-width: 1440px) {
- 
 }
